prettify plot view

--- a/dataExploration.ipynb
+++ b/dataExploration.ipynb
@@ -9,10 +9,28 @@
     "import json\n",
     "import numpy as np\n",
     "import itertools\n",
+    "import matplotlib.pyplot as plt\n",
     "\n",
     "with open('data/myFriends.json', 'r') as file:\n",
     "    users_info = json.load(file)\n",
     "users_info = users_info['response']['items']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def autolabel(rects):\n",
+    "    \"\"\"Attach a text label above each bar in *rects*, displaying its height.\"\"\"\n",
+    "    for rect in rects:\n",
+    "        height = rect.get_height()\n",
+    "        ax.annotate('{}'.format(height),\n",
+    "                    xy=(rect.get_x() + rect.get_width() / 2, height),\n",
+    "                    xytext=(0, 0.5),\n",
+    "                    textcoords=\"offset points\",\n",
+    "                    ha='center', va='bottom')"
    ]
   },
   {
@@ -72,8 +90,33 @@
    "source": [
     "city = list(map(lambda d: d['city']['title'] if 'city' in d.keys() else '', users_info))\n",
     "print(\"Значение и частота встречаемости значения в поле город:\\n\")\n",
-    "print(np.unique(city, return_counts=True))\n",
-    "del city"
+    "print(np.unique(city, return_counts=True))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x, height = np.unique(list(city), return_counts=True)\n",
+    "\n",
+    "fig, ax = plt.subplots(figsize=(10,7))\n",
+    "\n",
+    "rects = ax.bar(range(len(x)), height)\n",
+    "autolabel(rects)\n",
+    "\n",
+    "\n",
+    "ax.set_ylabel('Количество')\n",
+    "ax.set_xlabel('Город')\n",
+    "ax.set_title('Города в которых живут мои друзья')\n",
+    "\n",
+    "ax.legend()\n",
+    "ax.set_xticks(list(range(len(x))))\n",
+    "ax.set_xticklabels(x, rotation=90)\n",
+    "fig.tight_layout()\n",
+    "plt.savefig(\"graphs/friends_cities_bar.png\")\n",
+    "plt.show()\n"
    ]
   },
   {
