--- a/specialLinksGraphs.ipynb
+++ b/specialLinksGraphs.ipynb
@@ -214,17 +214,36 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "political_dict = {1 : \"коммунистические\",\n",
+    "2 : \"социалистические\",\n",
+    "3 : \"умеренные\",\n",
+    "4 : \"либеральные\",\n",
+    "5 : \"консервативные\",\n",
+    "6 : \"монархические\",\n",
+    "7 : \"ультраконсервативные\",\n",
+    "8 : \"индифферентные\",\n",
+    "9 : \"либертарианские\"}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "x, height = np.unique(list(political.values()), return_counts=True)\n",
     "\n",
-    "fig, ax = plt.subplots(figsize=(10,5))\n",
+    "fig, ax = plt.subplots(figsize=(10,7))\n",
     "\n",
     "rects = ax.bar(x, height)\n",
     "autolabel(rects)\n",
     "\n",
     "\n",
-    "ax.set_ylabel('Amount')\n",
-    "ax.set_title('My friends\\' political views')\n",
-    "\n",
+    "ax.set_ylabel('Количество')\n",
+    "ax.set_title('Политические взгляды моих друзей')\n",
+    "ax.set_xlim(-0.1,9.5)\n",
+    "ax.set_xticks(list(political_dict.keys()))\n",
+    "ax.set_xticklabels(list(political_dict.values()), rotation=90)\n",
     "ax.legend()\n",
     "\n",
     "fig.tight_layout()\n",
@@ -334,8 +353,8 @@
     "autolabel(rects)\n",
     "\n",
     "\n",
-    "ax.set_ylabel('Amount')\n",
-    "ax.set_title('My friends\\' religion views')\n",
+    "ax.set_ylabel('Количество')\n",
+    "ax.set_title('Религиозные взгляды моих друзей')\n",
     "\n",
     "ax.set_xticklabels(x, rotation=90)\n",
     "ax.legend()\n",
@@ -368,7 +387,11 @@
    "outputs": [],
    "source": [
     "key_word = 'schools'\n",
-    "key_word = 'universities'"
+    "key_word_translate = 'школ'\n",
+    "\"\"\"\n",
+    "key_word = 'universities'\n",
+    "key_word_translate = 'университетов'\n",
+    "\"\"\""
    ]
   },
   {
@@ -379,6 +402,7 @@
    "source": [
     "schools = dict(map(lambda d: (d['id'],d[key_word]) \n",
     "                    if key_word in d.keys() else (-1, -1), friends_info))\n",
+    "\n",
     "if -1 in schools:\n",
     "    del schools[-1]"
    ]
@@ -390,10 +414,12 @@
    "outputs": [],
    "source": [
     "prepared_schools_info = {}\n",
+    "school_names = {}\n",
     "for user_id,school_list in schools.items():\n",
     "    if school_list:\n",
     "        new_list = [int(school['id']) for school in school_list]\n",
-    "        prepared_schools_info[user_id]=new_list"
+    "        prepared_schools_info[user_id]=new_list\n",
+    "        school_names[user_id]=[school['name'] for school in school_list]"
    ]
   },
   {
@@ -402,7 +428,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "unique_schools, height = np.unique(list(itertools.chain(*prepared_schools_info.values())), return_counts=True)"
+    "unique_schools, height = np.unique(list(itertools.chain(*school_names.values())), return_counts=True)"
    ]
   },
   {
@@ -411,12 +437,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig, ax = plt.subplots(figsize=(10,5))\n",
+    "fig, ax = plt.subplots(figsize=(20,5))\n",
     "rects = ax.bar(range(len(unique_schools)), height)\n",
     "autolabel(rects)\n",
     "\n",
-    "ax.set_ylabel('Amount')\n",
-    "ax.set_title('My friends\\' {} frequencies'.format(key_word))\n",
+    "ax.set_xticks(list(range(len(unique_schools))))\n",
+    "ax.set_xticklabels(unique_schools, rotation=90)\n",
+    "ax.set_ylabel('Количество')\n",
+    "ax.set_title('Частота {} среди моих друзей'.format(key_word_translate))\n",
     "ax.legend()\n",
     "\n",
     "fig.tight_layout()\n",
@@ -528,8 +556,8 @@
     "autolabel(rects)\n",
     "\n",
     "\n",
-    "ax.set_ylabel('Amount')\n",
-    "ax.set_title('My friends\\' occupation')\n",
+    "ax.set_ylabel('Количество')\n",
+    "ax.set_title('Род занятий моих друзей')\n",
     "ax.set_xticks(list(range(len(x))))\n",
     "ax.set_xticklabels(x, rotation=90)\n",
     "ax.legend()\n",
@@ -603,7 +631,7 @@
     "    G, pos, edgelist=elook, width=2, edge_color=colors, with_labels=False\n",
     ")\n",
     "\n",
-    "plt.savefig(\"graphs/friends_political.png\")\n",
+    "plt.savefig(\"graphs/friends_occupation.png\")\n",
     "plt.show()"
    ]
   },
